--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
 
 /* Your CSS Code here. */
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+.song{
+	height:100%;
+	width:100%;
+	background-color: black;
+}
